--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_native_splash: ^2.0.0  # Para splash screen nativa (opcional)
+  flutter_svg: ^2.0.1            # Para exibir SVG, se necessário
+  gif: ^2.3.0                    # Para exibir GIF animado
+
   flutter:
     sdk: flutter
 
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/gif/gif_splash.gif   # Coloque uma imagem de splash temporária aqui
+  android: true
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,7 +68,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - img/
+    - assets/
+    - assets/gif/gif_splash.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -73,11 +82,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Salsa
+      fonts:
+        - asset: assets/fonts/salsa-regular.ttf
+        # - asset: assets/fonts/Salsa-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
