--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ flutter:
   assets:
     - assets/
     - assets/gif/gif_splash.gif
+    - assets/img/artista1.png
+    - assets/img/artista2.png
+    - assets/img/artista3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
